--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
         </div>
     </header>
 
-
-    <main>
         <div class="intro">
             <div class="container">
                 <div class="intro__wrapper">
@@ -65,7 +63,7 @@
                         </li>
                     </ul>
                 </div>
-                <section class="cards">
+                <div class="cards">
                     <a href="#" class="card">
                         <div class="card__img">
                             <img src="img/card_tour_photo-1.jpg" alt="">
@@ -156,7 +154,7 @@
                             <img src="img/Vector.svg" alt="">
                         </div>
                     </a>
-                </section>
+                </div>
             </div>
         </section>
 
@@ -233,7 +231,7 @@
                     </div>
                     <div class="form__buttons">
                         <button type="submit" class="form__buttons-submit form__big_button">Найти тур</button>
-                        <button type="reset" class="form__buttons-reset form__big_button" id="reset_btn">Сбросить</button>
+                        <button type="reset" class="form__buttons-reset form__big_button">Сбросить</button>
                     </div>
                 </form>
             </div>
@@ -404,7 +402,6 @@
                 </p>
             </div>
         </section>
-    </main>
 
     <footer class="footer">
         <div class="footer__wrapper">
