--- a/index.html
+++ b/index.html
@@ -286,22 +286,22 @@
             <div class="photos">
                 <div class="photos__row-first">
                     <img src="img/travel%20photo-1.jpg" alt="">
-                    <img src="img/travel%20photo-2.jpg" alt="" class="photo__disabled">
-                    <img src="img/travel%20photo-3.jpg" alt="" class="photo__disabled">
+                    <img src="img/travel%20photo-2.jpg" alt="" class="photo__disabled-tab">
+                    <img src="img/travel%20photo-3.jpg" alt="" class="photo__disabled-mobile">
                     <img src="img/travel%20photo-4.jpg" alt="">
                 </div>
                 <div class="photos__row-second">
                     <img src="img/travel%20photo-5.jpg" alt="">
-                    <img src="img/travel%20photo-6.jpg" alt="" class="photo__disabled">
-                    <img src="img/travel%20photo-7.jpg" alt="" class="photo__disabled">
+                    <img src="img/travel%20photo-6.jpg" alt="" class="photo__disabled-mobile">
+                    <img src="img/travel%20photo-7.jpg" alt="" class="photo__disabled-tab">
                     <img src="img/travel%20photo-8.jpg" alt="">
                     <img src="img/travel%20photo-13.jpg" alt="">
                 </div>
                 <div class="photos__row-third">
                     <img src="img/travel%20photo-9.jpg" alt="">
                     <img src="img/travel%20photo-10.jpg" alt="">
-                    <img src="img/travel%20photo-11.jpg" alt="" class="photo__disabled">
-                    <img src="img/travel%20photo-12.jpg" alt="" class="photo__disabled">
+                    <img src="img/travel%20photo-11.jpg" alt="" class="photo__disabled-mobile">
+                    <img src="img/travel%20photo-12.jpg" alt="" class="photo__disabled-tab">
                 </div>
             </div>
         </section>
